@@ -1,5 +1,9 @@
 2012-04-07  Bob Halley  <halley@dnspython.org>
 
+	* dns/rdtypes/ANY/SSHFP.py (SSHFP.from_text): Allow whitespace in
+	  the text string.  Thanks to Jan Andres for the report and the
+	  patch.
+
 	* dns/message.py (from_wire): dns.message.from_wire() now takes
 	  an 'ignore_trailing' parameter which defaults to False.  If set
 	  to True, then trailing junk will be ignored instead of causing
